# spenny-renderer

./: CMakeLists.txt  README.md
baseline/: CMakeLists.txt
baseline/include/: shader_src.h
baseline/resource/hdr/skycloudy/: HDR_029_Sky_Cloudy.ibl  Readme.txt
baseline/resource/testarena/: testlevel.glb
baseline/src/: main.cpp
spennyrender/: CMakeLists.txt
spennyrender/include/: framebuf.h  model.h  renderer.h  shader.h  spennymath.h  spennytypes.h  texture.h  vertbuf.h
spennyrender/src/: :w  framebuf.cpp  model.cpp  renderer.cpp  shader.cpp  texture.cpp
